Sugati/src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Preference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preference</label>
        <referenceTo>Holiday_Question__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Custom Record Type</description>
        <inlineHelpText>Custom Record Type</inlineHelpText>
        <label>Record Type</label>
        <referenceTo>Record_Type__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quoted to client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote gone cold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booking Optional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booking cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Redundant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enquiry gone cold</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllActivities</fullName>
        <filterScope>Team</filterScope>
        <label>All Activities</label>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>